ROX-7988: Fix z-index for Global Modal (stackrox/rox#9360)

--- a/ui/apps/platform/src/app.tw.css
+++ b/ui/apps/platform/src/app.tw.css
@@ -288,7 +288,6 @@ h6 {
 .search-modal {
     position: absolute;
     left: 0;
-    z-index: 10;
     top: 76px;
     height: calc(100% - 76px);
 }
